--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,13 +30,13 @@ services:
       retries: 80
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:9200/
     restart: unless-stopped
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
+    #ulimits:
+    #  memlock:
+    #    soft: -1
+    #    hard: -1
+    #  nofile:
+    #    soft: 65536
+    #    hard: 65536
     ports:
       - 9200:9200 # REST API
       - 9600:9600 # Performance Analyzer
