--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,7 +12,7 @@ tasks:
     command: |
       echo "Please wait for the administration screen to appear"
       bash /workspace/fusionauth-example-express-start-here/startup.sh
-      gp preview `gp url 9011`
+      gp preview `gp url 9011`/admin
 
 ports:
   - port: 9011
