--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,7 +18,7 @@ ports:
     onOpen: ignore
     visibility: public
   - port: 3000
-    onOpen: ignore
+    onOpen: open-preview
     visibility: public
   - port: 9012
     onOpen: ignore
@@ -37,6 +37,9 @@ ports:
     visibility: public
   - port: 1080
     onOpen: ignore
+    visibility: public
+  - port: 8080
+    onOpen: open-preview
     visibility: public
   - port: 9200
     onOpen: ignore
