--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ tasks:
   # ------------------------------------
   - name: docker-compose
     command: |
-      gp open README.html
+      gp preview https://fusionauth.io/docs/get-started/start-here#install-and-run-in-gitpod --external
       bash /workspace/fusionauth-example-express-start-here/ports.sh
       docker compose up
   - name: terminal
