--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,7 @@ tasks:
   # ------------------------------------
   - name: docker-compose
     command: |
+      gp open README.md
       bash /workspace/fusionauth-example-express-start-here/ports.sh
       docker compose up
   - name: terminal
