--- a/app/package.json
+++ b/app/package.json
@@ -3,28 +3,26 @@
   "version": "1.0.0",
   "description": "Example of setting up an express application with typescript.",
   "scripts": {
-    "dev": "ts-node-dev --exit-child src/index.ts",
-    "setup": "ts-node src/setup.ts"
+    "dev": "node --watch --experimental-strip-types src/index.mts"
   },
   "author": "Alex Patterson",
   "license": "Apache-2.0",
+  "type": "module",
+  "engines" : {
+    "node" : ">=22.0.0 <23.0.0"
+  },
   "dependencies": {
     "@fusionauth/typescript-client": "^1.46.0",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "jwks-rsa": "^3.0.1",
+    "express": "^5.1.0",
+    "jose": "^6.0.10",
     "pkce-challenge": "^3.1.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
     "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/node": "^20.4.2",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.3",
     "typescript": "^5.1.6"
   }
 }
