Trying SHAs for actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,8 +13,8 @@ jobs:
 
     steps:
       # Check out code
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
         with:
           node-version: 22
       # Set up the build environment
@@ -22,7 +22,7 @@ jobs:
 
       # Build
       - name: Checkout out the example kickstarts
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
         with:
           repository: FusionAuth/fusionauth-example-kickstart
           path: fusionauth-example-kickstart
