--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,34 +13,39 @@ jobs:
 
     steps:
       # Check out code
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
         with:
           node-version: 22
       # Set up the build environment
-      - run: npm ci --prefix "./app/"
+      - run: npm ci
 
       # Build
-      - name: Copy our kickstart file over so it gets picked up
-        run: mkdir faDockerComposeFilePath/ && cp -r kickstart faDockerComposeFilePath/ && cp kickstart/kickstart.json faDockerComposeFilePath/kickstart/k2.json
+      - name: Checkout out the example kickstarts
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+        with:
+          repository: FusionAuth/fusionauth-example-kickstart
+          path: fusionauth-example-kickstart
+      - name: Symlink to the Get Started kickstart
+        run: ln -s fusionauth-example-kickstart/get-started kickstart
       - name: Start FusionAuth
         uses: fusionauth/fusionauth-github-action@v1
         with:
-          FUSIONAUTH_VERSION: 1.48.3
+          FUSIONAUTH_VERSION: latest
           FUSIONAUTH_APP_KICKSTART_DIRECTORY_PATH: kickstart
       - name: Install npm dependencies
         run: |
           npm install
           npx playwright install-deps
           npx playwright install
-        working-directory: ./app
+        working-directory: .
       - name: Start app
         run: npm run dev & # & in background
-        working-directory: ./app
+        working-directory: .
 
       - name: Run Playwright tests
         run: npx playwright test --project=chromium
-        working-directory: ./app
+        working-directory: .
 
 # only for debugging playwright errors
 #      - uses: actions/upload-artifact@v4
